--- a/src/Assets/styles/CardDetailss.scss
+++ b/src/Assets/styles/CardDetailss.scss
@@ -20,6 +20,7 @@
    }
   .team-names {
     display: none;
+    margin-top: -10px;
   }
   
   .team-icons:hover ~ .team-names {
@@ -27,9 +28,17 @@
     transition: 1s ease-in-out;
     height: 35px;
   }
+  .team-namess {
+    display: none;
+  }
+  .team-icons:hover ~ .team-namess {
+    display: block;
+    transition: 1s ease-in-out;
+    height: 35px;
+  }
   .team-names{
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
   }
 
     .splide__arrow {
