--- a/src/Assets/styles/CardSlider.scss
+++ b/src/Assets/styles/CardSlider.scss
@@ -142,7 +142,7 @@
 
   .ended{
     margin-left: 60px;
-    margin-top: -35px !important ;
+    margin-top: -35px  ;
   }
   .mainSlider{
     height: 53vh !important;
