--- a/src/App.css
+++ b/src/App.css
@@ -82,17 +82,48 @@ li a{
 
  }
 
+ /* Live button */
+ .animation-container {
+  display: inline-block;
+  position: relative;
+}
+
+.circular-div {
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 1px;
+  font-size: 10px;
+  display: inline-block;
+  animation: fadeIn 1s ease-in-out infinite; /* Add 'infinite' for an infinite animation */
+  opacity: 0; /* Start with opacity set to 0 */
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.5; /* Optional: Set a mid-point opacity value if desired */
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
  @media screen and (max-width: 2600px) {
   .Cardslider{
    width: 65% !important;
   
   }
-  .endedd{
-    margin-left: 40px;
+  .end{
+    position: relative;
+    margin-left: 10px;
   }
-  .container{
-    padding-left:100px ;
-  }
+ 
+  /* .container{
+    padding-left:20px ;
+  } */
   .dash-headd{
     width: 75vw;
   }
@@ -106,8 +137,8 @@ li a{
 
   }
   .ended{
-    margin-top: -55px;
-    margin-left: -90px;
+    margin-top: -50px;
+    margin-left: 0px;
   }
   .tem-img-box{
     width: 10vw;
@@ -131,6 +162,10 @@ li a{
     width: 73% ;
 
   }
+  .end{
+    position: relative;
+    margin-left: 10px;
+  }
   .dash-headd{
     width: 82vw;
   }
@@ -148,10 +183,7 @@ li a{
   .mainSlider{
     margin-top: 20px !important;
   }
-  .ended{
-    margin-top: -50px;
-    margin-left: -10px;
-  }
+ 
   .tem-img-box{
     width: 12vw;
     padding-top: 0px;
@@ -160,7 +192,7 @@ li a{
     
    }
    .ended{
-    margin-left: -100px;
+    margin-left: 0px;
    }
 }
 
@@ -176,6 +208,7 @@ li a{
     margin-top: 20px !important;
     height: 40vh !important;
   }
+ 
   .sliderHeader{
     width: 100% ;
 
@@ -185,10 +218,7 @@ li a{
     padding-left: 8px;
     padding-right: 8px;
    }
-   .ended{
-    margin-top: -55px;
-    margin-left: 20px;
-  }
+  
   .tem-img{
     margin-top: -10px;
    }
@@ -290,10 +320,7 @@ li a{
 .pay-cardd{
   width: 100vw !important;
 
-}  .endedd{
-  margin-left: 60px;
-  margin-top: -20px !important;
-}
+}  
 .new-footer-box{
   width: 100vw;
 }
@@ -492,11 +519,30 @@ li a{
     display: flex;
     flex-direction: column;
   }
+  .end{
+    position: relative;
+    left: 10%;
+  }
+  .detail-live-end{
+    margin-top: 0px;
+    position: relative;
+    margin-left: 50px !important ;
+    top: 5%;
+  }
   .left{
     width: 100%;
   }
+  .team-icons{
+    margin-left: 0px !important;
+
+  }
   .input-feild{
     width: 75vw;
+  }
+  .banner-sliders{
+    width: 60%;
+    border: 1px solid;
+
   }
   .input-feild-label {
     width: 20vw;
@@ -517,9 +563,7 @@ li a{
     display: none;
     margin-top: -10px;
   }
-   .endedd{
-    margin-left: 70px !important;
-  }
+   
    .post-Button{
     margin-top: 0px !important;
     width: 100px !important;
@@ -616,6 +660,17 @@ li a{
   .tem-p{
     font-size: 10px !important;
   }
+  .deatil-container{
+    height: 30vh;
+    margin-top: 0px !important;
+  }
+  .detail-live-end{
+    margin-top: -10px;
+    position: relative;
+    /* margin-left: 40px ; */
+    left: -10% ;
+    top:-20%;
+  }
   .tem-img{
     width: 35px !important;
     height: 35px !important;
@@ -626,10 +681,7 @@ li a{
   .edit-contain{
     margin-left: -30px;
   }
-  .endedd{
-  position: relative;
-  left: -20px;
-  }
+  
   .team-namess {
     display: none;
     margin-top: 32px;
@@ -664,7 +716,7 @@ li a{
    }
    .ended{
     /* margin-left: 70px; */
-    margin-top: -35px !important  ;
+    margin-top: -45px !important  ;
     left: 20%;
   }
 }
@@ -673,9 +725,13 @@ li a{
     margin-top: -14% !important;
  
   }
-  .endedd{
-    position: relative;
-    left: 0px;
+ 
+    .detail-live-end{
+      margin-top: -10px;
+      position: relative;
+      /* margin-left: 40px ; */
+      left: 0% ;
+      top:-20%;
     }
   .watch-img{
     height: 35vh !important;
@@ -759,7 +815,8 @@ li a{
     height: 30vh;
    }
    .ended{
-    margin-top: -65px;
+    margin-top: -75px;
+
     left: -2%;
   }
    
@@ -780,6 +837,13 @@ li a{
     margin-top: 55px;
     
    }
+   .detail-live-end{
+    margin-top: -10px;
+    position: relative;
+    /* margin-left: 40px ; */
+    left: 0% ;
+    top:35%;
+  }
 
    .post-Button{
     margin-top: 0px !important;
@@ -796,6 +860,10 @@ li a{
     height: 40px;
 
    }
+   .team-namess {
+    display: none;
+    margin-top: 33px !important;
+  }
    .text-footer a{
     font-size: 11px;
    }
@@ -920,9 +988,25 @@ margin-left: -80px;
    .card-con{
     width: 90vw !important;
   }
+  .end{
+    position: relative;
+    margin-left: 40px;
+  }
+  .card-live-end{
+    position: relative;
+  }
+  .detail-live-end{
+    margin-top: 0px;
+    position: relative;
+    margin-left: -50px ;
+  }
   .team-namess {
     display: none;
     margin-top: -10px;
+  }
+  .team-icons{
+    margin-left: -80px;
+
   }
   .watch-img{
     width: 95vw;
@@ -961,9 +1045,7 @@ margin-left: -80px;
     width: 100% ;
 
   }
-  .endedd{
-    margin-left: -15px;
-  }
+ 
   .footer-goole-img{
     height: 0px;
     margin-top: -20px;
@@ -1107,7 +1189,7 @@ margin-left: -80px;
     padding-right: 8px;
    }
    .ended{
-    margin-top: -55px;
+    margin-top: -40px;
     margin-left: 20px;
   }
   .tem-img{
