--- a/src/index.css
+++ b/src/index.css
@@ -19,8 +19,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-.chunchun > div > .container {
+/* .chunchun > div > .container {
   width: 100% !important;
+} */
+
+.chunchun {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  justify-content: center;
 }
 @tailwind base;
 @tailwind components;
