--- a/src/App.css
+++ b/src/App.css
@@ -117,9 +117,15 @@ li a {
   .red-bar{
     width: 12.7vw;
   }
+  /* .teamOtherCards{
+    margin-right: -200px;
+  } */
   .Cardslider{
    width: 65% !important;
   
+  }
+  .nfl-view{
+    margin-top: 50px;
   }
   .live{
     position: relative;
@@ -453,6 +459,7 @@ li a {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    width: 73vw;
   }
   .input-feild-image {
     display: flex;
@@ -701,6 +708,38 @@ li a {
 @media screen and (max-width: 430px) {
   .tem-p {
     font-size: 10px !important;
+  }
+  .input-label1{
+    width: 76vw;
+  }
+  .bg-tab-mb{
+    height: 27vh !important;
+  }
+  .userhisotryy{
+    width: 100%;
+    height: 50vh;
+    background-color: red;
+  }
+  .main-user-container{
+    width: 106vw;
+    left: 4% !important;
+  }
+  .user-info{
+    padding: 0 !important;
+  }
+
+  .address-ip{
+    max-width: 45vw;
+    min-height:10vh ;
+  }
+  .edit-con{
+    left: 7% !important;
+  }
+  .left{
+    width: 100% !important;
+  }
+  .tv-logo{
+    width: 17vw;
   }
   .deatil-container{
     height: 30vh;
@@ -1026,6 +1065,12 @@ li a {
   }
   .card-con {
     width: 90vw !important;
+  }
+  .nfl-view{
+    margin-top: 0px;
+  }
+  .bg-tab-mb{
+    height: 32vh;
   }
   .end{
     position: relative;
