--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,17 @@ li a {
   .red-bar{
     width: 12.7vw;
   }
+  .card-match{
+    width: 65.5vw;
+  }
+  .score{
+    visibility: hidden;
+
+  }
+  .score-card:hover .score{
+    visibility: visible;
+
+  }
   /* .teamOtherCards{
     margin-right: -200px;
   } */
@@ -129,8 +140,7 @@ li a {
   }
   .live{
     position: relative;
-    left: 40%;
-    margin-top: -40px;
+    margin-top: -50px;
   }
   .end{
     position: relative;
@@ -172,6 +182,9 @@ li a {
   }
   .Cardslider {
     width: 73% !important;
+  }
+  .card-match{
+    width: 73vw;
   }
   .sliderHeader {
     width: 73%;
@@ -246,7 +259,6 @@ li a {
   }
   .live{
     position: relative;
-    left: 30%;
     margin-top: -40px;
   }
 }
@@ -563,7 +575,7 @@ li a {
   }
   .live{
     position: relative;
-    left: 26%;
+
     margin-top: -34px;
   }
   .end{
@@ -747,7 +759,6 @@ li a {
   }
   .live{
     position: relative;
-    left: 8%;
     margin-top: -40px;
   }
   .detail-live-end{
@@ -920,7 +931,6 @@ li a {
    }
    .live{
     position: relative;
-    left: 6%;
     margin-top: -40px;
   }
    .detail-live-end{
