--- a/src/index.css
+++ b/src/index.css
@@ -23,13 +23,13 @@ code {
   width: 100% !important;
 } */
 
-.chunchun {
+/* .chunchun {
   padding: 0;
   margin: 0;
   list-style: none;
   display: flex;
   justify-content: center;
-}
+} */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
