--- a/src/Assets/styles/CardSlider.scss
+++ b/src/Assets/styles/CardSlider.scss
@@ -8,6 +8,25 @@
   //   rgb(255, 0, 157) 50%
   // );
 }
+
+.SearchCard {
+  .splide__arrow {
+    width: 30px !important;
+    height: 30px !important;
+    opacity: 1 !important;
+    background-image: linear-gradient(to right, #00c4ff, #0074ff);
+  }
+  .splide__arrow--prev svg,
+  .splide__arrow--next svg {
+    fill: white !important;
+    height: 12px !important;
+    width: 12px !important;
+  }
+  .splide__arrow--next {
+    margin-right: 27px !important;
+    // display: none;
+  }
+}
 .cardSliderr {
   width: 169px !important;
   height: 110px !important;
