--- a/src/App.css
+++ b/src/App.css
@@ -185,6 +185,9 @@ li a {
   .red-bar {
     width: 14.4vw;
   }
+  .banner-text{
+    bottom: -90% !important;
+  } 
   .Cardslider {
     width: 73% !important;
   }
@@ -387,14 +390,7 @@ li a {
 .new-footer-box {
   width: 100vw;
 }
-.pay-cardds {
-  width: 93vw !important;
-  height: 30vh;
-}
-.pay-card-box {
-  width: 98vw;
-  padding: 10;
-}
+
 .coupan-btn {
   margin-top: 10px;
 }
@@ -507,6 +503,7 @@ li a {
   }
   .Useredit-side {
     width: 100%;
+    height: 23vh !important;
     margin: 0;
     margin-top: 10px;
   }
@@ -515,7 +512,6 @@ li a {
   }
   .sub-type {
     width: auto;
-    border: 1px solid;
     justify-content: space-around;
   }
   .main-page {
@@ -728,7 +724,6 @@ li a {
   .userhisotryy {
     width: 100%;
     height: 50vh;
-    background-color: red;
   }
   .main-user-container {
     width: 106vw;
@@ -740,7 +735,6 @@ li a {
 
   .address-ip {
     max-width: 45vw;
-    min-height: 10vh;
   }
   .edit-con {
     left: 7% !important;
@@ -1065,12 +1059,22 @@ li a {
   .signup-Bg {
     width: 100%;
     /* height: 50vh; */
+   
   }
+
   .card-con {
     width: 90vw !important;
   }
   .nfl-view {
     margin-top: 0px;
+  }
+  .pay-cardds {
+    width: 100% !important;
+    height: 20vh;
+  }
+  .pay-card-box {
+    width: 70vw;
+    padding: 10;
   }
   .bg-tab-mb {
     height: 32vh;
@@ -1232,6 +1236,37 @@ li a {
     display: block;
     margin-top: 10px;
   }
+  .main-user-container {
+    display: flex;
+    flex-direction: column;
+  }
+  .user-edit {
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .user-info {
+    width: 100%;
+    padding: 0;
+    margin-top: 10px;
+  }
+  .active-user-btn {
+    margin-left: -50px;
+  }
+  .Useredit-side {
+    width: 100%;
+    height: 18vh;
+    margin: 0;
+    margin-top: 10px;
+  }
+  .user-transaction {
+    margin-top: 10px;
+  }
+  .sub-type {
+    width: auto;
+    justify-content: space-around;
+  }
+
   .side-icon {
     width: 5.5vw !important;
   }
