--- a/src/Assets/styles/Navbar.scss
+++ b/src/Assets/styles/Navbar.scss
@@ -96,9 +96,12 @@
 
 }
 
-.css-6hp17o-MuiList-root-MuiMenu-list {
-      background-color: #00022b;
-}
+// .css-6hp17o-MuiList-root-MuiMenu-list {
+//       background-color: #00022b;
+// }
+// .css-6hp17o-MuiList-root-MuiMenu-list{
+//   height: 35vh !important;
+// }
 
 
 @media screen and (max-width: 480px) {
