--- a/src/App.css
+++ b/src/App.css
@@ -118,6 +118,9 @@ li a {
     width: 10% !important;
     margin: auto;
   }
+  .nav-menu-btn{
+    display: none;
+  }
   .tvChannel-head{
     width: 23vw;
   }
@@ -732,7 +735,7 @@ li a {
     width: 76vw;
   }
   .bg-tab-mb {
-    height: 27vh !important;
+    height: 29vh !important;
   }
   .userhisotryy {
     width: 100%;
@@ -999,7 +1002,7 @@ li a {
     margin-top: 10px;
   }
   .mbl-bg-img {
-    height: 25vh !important;
+    height: 28vh !important;
   }
   .team-p {
     font-size: 16px;
@@ -1031,6 +1034,26 @@ li a {
     width: 100%;
     display: flex;
     flex-direction: column;
+  }
+  .nav-a{
+    color: black !important;
+    font-weight: 700;
+    font-size: 18px;
+    padding-left: 20px;
+   
+  }
+  .nav-aa{
+    position: relative;
+    width: 100vw;
+    border-bottom: 1px solid;
+    right: 18%;
+
+  }
+  .nav-aaa{
+    position: relative;
+    width: 100vw;
+    right: 18%;
+
   }
   .app-btn {
     width: 100%;
@@ -1072,6 +1095,15 @@ li a {
   .signup-Bg {
     width: 100%;
     /* height: 50vh; */
+   
+  }
+  .nav-menu-btn{
+    display: block;
+  }
+  .nav-a{
+    color: black !important;
+    font-weight: 700;
+    font-size: 18px;
    
   }
 
