--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ div {
   width: 100vw;
   height: 100vh;
   overflow-x: hidden;
-  overflow-y: scroll;
+  /* overflow-y: hidden; */
   background-color: #0d0620;
 }
 li a {
