--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,12 @@ li a {
   width: 100vw !important;
   height: 100vh !important;
 }
+.css-zw3mfo-MuiModal-root-MuiDialog-root {
+  opacity: 1 !important;
+}
+.css-zw3mfo-MuiModal-root-MuiDialog-root {
+  opacity: 1 !important;
+}
 .google-btn {
   width: 100% !important;
 }
@@ -113,21 +119,20 @@ li a {
     opacity: 1;
   }
 }
-  .team-icons:hover{
-    transform:scale(1.1);
-    transition: 0.3s ease-in-out;
-  
-   }
-  .team-Logo-name {
-    display: none;
-    margin-top: -10px;
-  }
-  
-  .team-icons:hover ~ .team-Logo-name {
-    display: block;
-    transition: 1s ease-in-out;
-    height: 35px;
-  }
+.team-icons:hover {
+  transform: scale(1.1);
+  transition: 0.3s ease-in-out;
+}
+.team-Logo-name {
+  display: none;
+  margin-top: -10px;
+}
+
+.team-icons:hover ~ .team-Logo-name {
+  display: block;
+  transition: 1s ease-in-out;
+  height: 35px;
+}
 @media screen and (max-width: 1500px) {
   .score-card {
     min-width: 270px;
@@ -148,7 +153,7 @@ li a {
     width: 10% !important;
     margin: auto;
   }
-  .detail-live-end{
+  .detail-live-end {
     position: absolute;
     left: 45%;
   }
@@ -161,8 +166,8 @@ li a {
   .tvChannel-head2 {
     width: 24vw;
   }
-  .banner-slide-card{
-    margin-left: 30px
+  .banner-slide-card {
+    margin-left: 30px;
   }
 
   .red-bar {
@@ -207,7 +212,7 @@ li a {
 
   .mainSlider {
     margin-top: 20px !important;
-    height:32rem !important;
+    height: 30rem !important;
   }
   .sliderHeader {
     width: 65%;
@@ -234,7 +239,7 @@ li a {
   .banner-text {
     bottom: -60% !important;
   }
-  .main-home-page{
+  .main-home-page {
     height: 160vh;
   }
   .Cardslider {
@@ -293,11 +298,11 @@ li a {
   .nav-sider {
     border: 0px;
   }
-  .main-home-page{
+  .main-home-page {
     height: 75rem !important;
   }
- 
- .detail-live-end{
+
+  .detail-live-end {
     position: absolute;
     left: 43%;
     margin-top: -8px;
@@ -868,7 +873,6 @@ li a {
     margin-top: -14% !important;
   }
 
-
   .watch-img {
     height: 30vh !important;
   }
@@ -1375,7 +1379,7 @@ li a {
   }
 }
 @media screen and (max-width: 1768px) {
-  .main-home-page{
+  .main-home-page {
     height: 100rem;
   }
   /* .edit-con{
@@ -1391,7 +1395,7 @@ li a {
   .tvChannel-head2 {
     width: 30vw;
   }
-  .main-home-page{
+  .main-home-page {
     height: 100rem;
   }
   /* .edit-con{
@@ -1408,8 +1412,8 @@ li a {
   .banner-Buttons {
     width: 20vw !important;
   }
-  .banner-slide-card{
-    margin-left: 0px
+  .banner-slide-card {
+    margin-left: 0px;
   }
   .card-match {
     width: 76vw;
@@ -1430,10 +1434,9 @@ li a {
     width: 24vw;
     height: 30vh;
   }
-.banner-slide-card{
-  width: 100rem;
-}
-
+  .banner-slide-card {
+    width: 100rem;
+  }
 }
 @media screen and (max-width: 1190px) {
   .dash-main {
@@ -1443,10 +1446,9 @@ li a {
     width: 24vw;
     height: 30vh;
   }
-.banner-slide-card{
-  width: 92rem;
-}
-
+  .banner-slide-card {
+    width: 92rem;
+  }
 }
 @media screen and (max-width: 1024px) {
   .banner-sign-text {
@@ -1459,13 +1461,13 @@ li a {
     height: 35vh;
     width: 100%;
   }
-  .main-home-page{
+  .main-home-page {
     height: 90rem;
   }
-  .banner-slide-card{
+  .banner-slide-card {
     width: 85rem;
   }
-  
+
   .banner-Buttons {
     width: 27vw !important;
     margin-top: 120px;
@@ -1481,45 +1483,45 @@ li a {
   }
 }
 @media screen and (max-width: 960px) {
-  .banner-slide-card{
+  .banner-slide-card {
     width: 80rem;
   }
 }
 @media screen and (max-width: 860px) {
-  .banner-slide-card{
+  .banner-slide-card {
     width: 65rem;
   }
 }
 @media screen and (max-width: 760px) {
-  .banner-slide-card{
+  .banner-slide-card {
     width: 60rem;
   }
 }
 @media screen and (max-width: 750px) {
-  .banner-slide-card{
+  .banner-slide-card {
     width: 55rem;
   }
 }
 @media screen and (max-width: 700px) {
-  .banner-slide-card{
+  .banner-slide-card {
     width: 51rem;
   }
 }
 @media screen and (max-width: 600px) {
-  .banner-slide-card{
+  .banner-slide-card {
     width: 45rem;
   }
 }
 @media screen and (max-width: 550px) {
-  .banner-slide-card{
+  .banner-slide-card {
     width: 42rem;
   }
-  .main-home-page{
+  .main-home-page {
     height: 70rem !important;
   }
 }
 @media screen and (max-width: 500px) {
-  .banner-slide-card{
+  .banner-slide-card {
     width: 36rem;
   }
 }
@@ -1612,11 +1614,10 @@ li a {
     width: 100%;
   }
   .mbl-bg-img {
-    height: 28vh ;
+    height: 28vh;
   }
   .bg-tab-mb {
-    height: 30vh ;
-
+    height: 30vh;
   }
   .dash-card {
     width: 100vw;
@@ -1631,10 +1632,9 @@ li a {
   .pages {
     width: 98vw;
   }
-  .main-home-page{
+  .main-home-page {
     height: 60rem !important;
   }
-
 }
 @media screen and (max-width: 450px) {
   .card-con {
@@ -1648,6 +1648,14 @@ li a {
   }
   .plan-page-text {
     width: 93vw;
+  }
+  .detail-live-end {
+    position: absolute;
+    left: 43%;
+    margin-top: -8px;
+  }
+  .team-Logo-name {
+    /* margin-top: 35px; */
   }
 }
 @media screen and (max-width: 390px) {
@@ -1668,68 +1676,58 @@ li a {
   .plan-page-text {
     width: 100vw;
   }
+  .detail-live-end {
+    position: absolute;
+    left: 43%;
+    margin-top: 28px;
+  }
+  .team-Logo-name {
+    margin-top: 35px;
+  }
 }
 /* Break points for card Details slider */
 @media screen and (max-width: 1168px) {
-  .deatils-carddd{
+  .deatils-carddd {
     width: 76%;
-
-
   }
 }
 @media screen and (max-width: 1120px) {
-  .deatils-carddd{
+  .deatils-carddd {
     width: 73%;
-
-
   }
 }
 @media screen and (max-width: 1080px) {
-  .deatils-carddd{
+  .deatils-carddd {
     width: 70%;
-
-
   }
 }
 @media screen and (max-width: 880px) {
-  .deatils-carddd{
+  .deatils-carddd {
     width: 65%;
-
-
   }
 }
 @media screen and (max-width: 860px) {
-  .deatils-carddd{
+  .deatils-carddd {
     width: 79%;
-
-
   }
 }
 @media screen and (max-width: 835px) {
-  .deatils-carddd{
+  .deatils-carddd {
     width: 75%;
-
-
   }
 }
 @media screen and (max-width: 785px) {
-  .deatils-carddd{
+  .deatils-carddd {
     width: 71%;
-
-
   }
 }
 @media screen and (max-width: 755px) {
-  .deatils-carddd{
+  .deatils-carddd {
     width: 80%;
-
-
   }
 }
 @media screen and (max-width: 675px) {
-  .deatils-carddd{
+  .deatils-carddd {
     width: 75%;
-
-
   }
 }
