--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,10 @@ li a {
   width: 100%;
   height: 26vh;
   background-image: url(./Assets//Images/footer-bg-item.png);
+  overflow: auto;
+}
+.footer {
+  overflow: auto;
 }
 .fooer-Img ul {
   display: flex;
@@ -876,6 +880,7 @@ li a {
   .watch-img {
     height: 30vh !important;
   }
+
   .tem-icons {
     height: 30px !important;
     width: 30px !important ;
