--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ li a {
 } */
 .footer {
   width: 100%;
-  height: 30vh;
+  height: 24vh;
   display: flex;
   justify-content: space-between;
   align-items: baseline;
@@ -50,7 +50,7 @@ li a {
 }
 .fooer-Img {
   width: 100%;
-  height: 26vh;
+  /* height: 26vh; */
   background-image: url(./Assets//Images/footer-bg-item.png);
   overflow: auto;
 }
