--- a/src/App.css
+++ b/src/App.css
@@ -248,9 +248,9 @@ li a {
   .banner-text {
     bottom: -60% !important;
   }
-  .main-home-page {
+  /* .main-home-page {
     height: 160vh;
-  }
+  } */
   .Cardslider {
     width: 73% !important;
   }
@@ -1643,7 +1643,7 @@ li a {
     width: 98vw;
   }
   .main-home-page {
-    height: 60rem !important;
+    height: 80rem !important;
   }
 }
 @media screen and (max-width: 450px) {
