--- a/src/App.css
+++ b/src/App.css
@@ -1139,6 +1139,9 @@ li a {
     width: 100%;
     /* height: 50vh; */
   }
+  .icons-top {
+    margin-top: 150px;
+  }
 
   .nav-menu-btn {
     display: block;
