--- a/src/App.css
+++ b/src/App.css
@@ -1750,3 +1750,13 @@ li a {
     width: 75%;
   }
 }
+@media screen and (max-width: 900px) {
+  .css-r6ewbb-MuiToolbar-root{
+    position: relative !important;
+  }
+  .css-1lfs2tq-MuiTypography-root{
+    position: absolute;
+    left: 2%;
+  }
+
+}
